results/SVCOMP/conversational/log-StringConstructors04-2024_03_16_20_47_39.txt
public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures \result == true <==> arg.equals(new String(new char[]{'b', 'l', 'u', 'e'}));
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result == true <==> arg.equals(new String(new char[]{'b', 'l', 'u', 'e'}));
                                                ^
1 error

public class StringConstructors04 {
    //@ requires arg != null;
    //@ ensures \result == true <==> arg.equals("blue");
    public static boolean f(String arg) {
        char[] charArray = {'d', 'i', 'f', 'f', 'b', 'l', 'u', 'e'};
        String s4 = new String(charArray, 4, 4);
        return s4.equals(arg);
    }
}
